fixed header spacing issue, and added trunkshows to the header

--- a/themes/coco/_/css/style.less
+++ b/themes/coco/_/css/style.less
@@ -772,7 +772,7 @@ h6,.h6{
 }
 
 @header-height: 170px;
-@header-small-height: 118px;
+@header-small-height: auto;
 
 #header{
 	height: @header-height;
